# cross_decoder

./: .gitignore  README.md  pyproject.toml
src/cross_decoder/: __init__.py  cross_decoder.py
src/cross_decoder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_plots/: decoding_metadata.json  decoding_r2.npy  r2_matrix.csv
tests/: test_cross_decoder.py
